--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Kanit:400,400i,700,700i&display=swap" rel="stylesheet">
     <title>Star Wars API</title>
-</head>
+<link href="main.css" rel="stylesheet"></head>
 <body>
     <div class="main">
         <h1>Learn about a Star Wars character</h1>
@@ -30,5 +30,5 @@
     
 
 
-</body>
+<script type="text/javascript" src="main.js"></script></body>
 </html>
